--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -17,6 +17,8 @@
                     <li>
                         <strong><span data-bind="text: Name"></span></strong>
                         <small><a href="#" data-bind="click: $parent.getFeedbackDetail">Details</a></small>
+                        <small><a href="#" data-bind="click: $parent.deleteFeedback">Delete</a></small>
+                        <small><a href="#" data-bind="click: $parent.updateFeedback">Update</a></small>
                     </li>
                 </ul>
             </div>
@@ -25,7 +27,6 @@
     </div>
 
     <!-- ko if:detail() -->
-
     <div class="col-md-4">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -40,16 +41,17 @@
         </div>
     </div>
     <!-- /ko -->
+
 </div>
 
-    <div class="row">
-        <div class="col-md-2 col-md-offset-5">
-            <button class="btn btn-primary" data-toggle="modal" data-target="#myModal">Оставить отзыв</button>
-        </div>
+<div class="row">
+    <div class="col-md-2 col-md-offset-5">
+        <button class="btn btn-primary" data-toggle="modal" data-target="#myModal">Оставить отзыв</button>
     </div>
+</div>
 
 
-    <div id="myModal" class="modal fade" tabindex="-1">
+<div id="myModal" class="modal fade" tabindex="-1">
         <div class="modal-dialog  modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
@@ -77,14 +79,13 @@
                             <label for="inputMessage" class="col-sm-4 col-md-push-4 control-label">Сообщение</label>
                             <div class="col-sm-10 col-md-offset-1">
                                 <input type="text" class="form-control" id="inputMessage" placeholder="Введите сообщение" data-bind="value:Message" />
-                                
                             </div>
-                        </div>
-                        <button type="submit" class="btn btn-primary col-sm-6 col-sm-push-3" >ОТПРАВИТЬ</button>
-                        <br /> <br />
-                    </form>
-                </div>
+                       </div>
+                    <button type="submit" class="btn btn-success btn-sm col-sm-6">Отправить</button>
+                    <button class="btn btn-outline-success btn-sm col-sm-6" data-bind="click: reset">Сбросить данные</button>
+                    <br /> <br />
+                </form>
             </div>
         </div>
     </div>
-
+</div>
