--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div class="row">
 
-    <div class="col-md-4 col-md-offset-2">
+    <div class="col-md-4 col-md-push-2">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h2 class="panel-title">Feedbacks</h2>
@@ -45,45 +45,46 @@
 </div>
 
 <div class="row">
-    <div class="col-md-2 col-md-offset-5">
-        <button class="btn btn-primary" data-toggle="modal" data-target="#myModal">Оставить отзыв</button>
+    <div class="col-md-2 col-md-push-5">
+        <button class="btn btn-default" data-toggle="modal" data-target="#myModal">Оставить отзыв</button>
     </div>
 </div>
 
 
 <div id="myModal" class="modal fade" tabindex="-1">
-        <div class="modal-dialog  modal-sm">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button class="close" data-dismiss="modal">x</button>
-                    <h4 class="modal-title col-sm-10 col-md-push-1">ОБРАТНАЯ СВЯЗЬ</h4>
-                </div>
-                <div class="modal-body">
-                    <form class="form-horizontal" id="form" data-bind="submit: addFeedback">
-                        <div class="form-group" data-bind="with: newFeedback">
-                            <label for="inputName" class="col-sm-2 col-md-push-4 control-label">Имя</label>
-                            <div class="col-sm-10 col-md-offset-1">
-                                <input type="text" class="form-control" id="inputName" placeholder="Введите имя" data-bind="value:Name" />
-                            </div>
+    <div class="modal-dialog  modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button class="close" data-dismiss="modal" data-bind="click: clearForm">x</button>
+                <h4 class="modal-title col-md-8 col-md-push-2">Обратная связь</h4>
+            </div>
+            <div class="modal-body">
+                <form class="form-horizontal" id="form" data-bind="submit: addFeedback">
+                    <div class="form-group" data-bind="with: newFeedback">
+                        <label for="inputName" class="col-sm-2 col-md-push-4 control-label">Имя</label>
+                        <div class="col-sm-10 col-md-offset-1">
+                            <input type="text" class="form-control" id="inputName" placeholder="Введите имя" data-bind="value:Name" />
+                        </div>
 
-                            <label for="inputPhone" class="col-sm-2 col-md-push-4  control-label">Телефон</label>
-                            <div class="col-sm-10 col-md-offset-1">
-                                <input type="number" class="form-control" id="inputPhone" placeholder="Введите телефон" data-bind="value:Phone" />
-                            </div>
+                        <label for="inputPhone" class="col-sm-2 col-md-push-4  control-label">Телефон</label>
+                        <div class="col-sm-10 col-md-offset-1">
+                            <input type="number" class="form-control raz" id="inputPhone" placeholder="Введите телефон" data-bind="value:Phone" />
+                        </div>
 
-                            <label for="inputEmail" class="col-sm-2 col-md-push-4 control-label">Email</label>
-                            <div class="col-sm-10 col-md-offset-1">
-                                <input type="text" class="form-control" id="inputEmail" placeholder="Введите email" data-bind="value:Email" />
-                            </div>
+                        <label for="inputEmail" class="col-sm-2 col-md-push-4 control-label">Email</label>
+                        <div class="col-sm-10 col-md-offset-1">
+                            <input type="text" class="form-control" id="inputEmail" placeholder="Введите email" data-bind="value:Email" />
+                        </div>
 
-                            <label for="inputMessage" class="col-sm-4 col-md-push-4 control-label">Сообщение</label>
-                            <div class="col-sm-10 col-md-offset-1">
-                                <input type="text" class="form-control" id="inputMessage" placeholder="Введите сообщение" data-bind="value:Message" />
-                            </div>
-                       </div>
-                    <button type="submit" class="btn btn-success btn-sm col-sm-6">Отправить</button>
-                    <button class="btn btn-outline-success btn-sm col-sm-6" data-bind="click: reset">Сбросить данные</button>
-                    <br /> <br />
+                        <label for="inputMessage" class="col-sm-4 col-md-push-4 control-label">Сообщение</label>
+                        <div class="col-sm-10 col-md-offset-1">
+                            <input type="text" class="form-control" id="inputMessage" placeholder="Введите сообщение" data-bind="value:Message" />
+                        </div>
+                    </div>
+                    <br />
+                    <button type="submit" class="btn btn-xs btn-success col-sm-4">Отправка</button>
+                    <button class="btn btn-xs btn-danger col-sm-4 col-md-push-4" data-bind="click: clearForm">Сброс</button>
+                    <br />
                 </form>
             </div>
         </div>
