--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,6 +2,10 @@
     @Scripts.Render("~/bundles/app")
 }
 
+@section scripts {
+    @Scripts.Render("~/bundles/bootstrap.validate.js")
+}
+
 <div class="page-header">
 </div>
 
@@ -63,7 +67,7 @@
                     <div class="form-group" data-bind="with: newFeedback">
                         <label for="inputName" class="col-sm-2 col-md-push-4 control-label">Имя</label>
                         <div class="col-sm-10 col-md-offset-1">
-                            <input type="text"  class="form-control" id="inputName" placeholder="Введите имя" data-bind="value:Name" />
+                            <input type="text" class="form-control" id="inputName" placeholder="Введите имя" data-bind="value:Name" />
                         </div>
 
                         <label for="inputPhone" class="col-sm-2 col-md-push-4  control-label">Телефон</label>
@@ -78,19 +82,16 @@
 
                         <label for="inputMessage" class="col-sm-4 col-md-push-4 control-label">Сообщение</label>
                         <div class="col-sm-10 col-md-offset-1">
-                            <textarea class="form-control" id="inputMessage" rows="4" maxlength="250"  placeholder="Введите отзыв" data-bind="value:Message"></textarea>
+                            <textarea class="form-control" id="inputMessage" rows="4" maxlength="250" placeholder="Введите отзыв" data-bind="value:Message"></textarea>
                         </div>
                     </div>
                     <br />
-                    <button type="submit" class="btn btn-xs btn-success col-sm-4">Отправка</button>
-                    <button class="btn btn-xs btn-danger col-sm-4 col-md-push-4" data-bind="click: clearForm">Сброс</button>
-                    <br />
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-xs btn-success col-sm-4 col-md-push-1">Отправка</button>
+                        <button class="btn btn-xs btn-danger col-sm-4 col-md-push-3" data-bind="click: clearForm">Сброс</button>
+                    </div>
                 </form>
             </div>
-
-            <div class="modal-body">
-            </div>
-
         </div>
     </div>
 </div>
