--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,6 +19,17 @@
         width:270px;
         word-break:break-all;
         }
+
+        .errorStyle  
+         {  
+  
+            background-color:#ffd800;  
+            color:#808080;  
+            font-size:13px;  
+            padding:5px 5px;  
+            border-radius:5px;  
+            margin-top:7px;  
+         } 
     </style>
 </head>
 <body>
@@ -51,7 +62,6 @@
         <footer>
         </footer>
     </div>
-
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
