--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,9 +2,6 @@
     @Scripts.Render("~/bundles/app")
 }
 
-@section scripts {
-    @Scripts.Render("~/bundles/bootstrap.validate.js")
-}
 
 <div class="page-header">
 </div>
@@ -54,20 +51,22 @@
     </div>
 </div>
 
-
 <div id="myModal" class="modal fade" tabindex="-1">
     <div class="modal-dialog  modal-sm">
         <div class="modal-content">
             <div class="modal-header">
                 <button class="close" data-dismiss="modal" data-bind="click: clearForm">x</button>
-                <h4 class="modal-title col-md-8 col-md-push-2">Обратная связь</h4>
+                <div class="form-group">
+                    <h4 class="modal-title col-md-8 col-md-push-2">Обратная связь</h4>
+                </div>
             </div>
             <div class="modal-body">
                 <form class="form-horizontal" id="form" data-bind="submit: addFeedback">
                     <div class="form-group" data-bind="with: newFeedback">
-                        <label for="inputName" class="col-sm-2 col-md-push-4 control-label">Имя</label>
+                        <label for="inputName" class="col-sm-2 col-md-push-4 control-label"><span style="color: red">*</span>Имя</label>
                         <div class="col-sm-10 col-md-offset-1">
                             <input type="text" class="form-control" id="inputName" placeholder="Введите имя" data-bind="value:Name" />
+                            <p data-bind="validationMessage:Name"></p>
                         </div>
 
                         <label for="inputPhone" class="col-sm-2 col-md-push-4  control-label">Телефон</label>
@@ -80,9 +79,10 @@
                             <input type="text" class="form-control" id="inputEmail" placeholder="Введите email" data-bind="value:Email" />
                         </div>
 
-                        <label for="inputMessage" class="col-sm-4 col-md-push-4 control-label">Сообщение</label>
+                        <label for="inputMessage" class="col-sm-4 col-md-push-4 control-label"><span style="color: red">*</span>Сообщение</label>
                         <div class="col-sm-10 col-md-offset-1">
                             <textarea class="form-control" id="inputMessage" rows="4" maxlength="250" placeholder="Введите отзыв" data-bind="value:Message"></textarea>
+                            <p data-bind="validationMessage:Message"></p>
                         </div>
                     </div>
                     <br />
