--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -17,8 +17,8 @@
                 <ul class="list-unstyled" data-bind="foreach: feedbacks">
                     <li>
                         <strong><span data-bind="text: Name"></span></strong>
-                        <small><a href="#" data-bind="click: $parent.getFeedbackDetail">Details</a></small>
-                        <small><a href="#" data-bind="click: $parent.deleteFeedback">Delete</a></small>
+                        <small><a href="#" data-bind="click: $parent.getFeedback">Details</a></small>
+                        <small><a href="#" data-bind="click: $parent.removeFeedback">Delete</a></small>
                         <small><a href="#" data-bind="click: $parent.updateFeedback">Update</a></small>
                     </li>
                 </ul>
@@ -62,11 +62,13 @@
             </div>
             <div class="modal-body">
                 <form class="form-horizontal" id="form" data-bind="submit: addFeedback">
-                    <div class="form-group" data-bind="with: newFeedback">
+                    <div class="form-group" data-bind="with: objFeedback">
                         <label for="inputName" class="col-sm-2 col-md-push-4 control-label"><span style="color: red">*</span>Имя</label>
                         <div class="col-sm-10 col-md-offset-1">
                             <input type="text" class="form-control" id="inputName" placeholder="Введите имя" data-bind="value:Name" />
-                            <p data-bind="validationMessage:Name"></p>
+                            <div>
+                                <p><small><span style="color: red">Это поле является обязательным</span></small></p>
+                            </div>
                         </div>
 
                         <label for="inputPhone" class="col-sm-2 col-md-push-4  control-label">Телефон</label>
@@ -82,7 +84,9 @@
                         <label for="inputMessage" class="col-sm-4 col-md-push-4 control-label"><span style="color: red">*</span>Сообщение</label>
                         <div class="col-sm-10 col-md-offset-1">
                             <textarea class="form-control" id="inputMessage" rows="4" maxlength="250" placeholder="Введите отзыв" data-bind="value:Message"></textarea>
-                            <p data-bind="validationMessage:Message"></p>
+                            <div>
+                                <p><small><span style="color: red">Это поле является обязательным</span></small></p>
+                            </div>
                         </div>
                     </div>
                     <br />
